[package]
name = "qcloud_client"
version = "0.1.0"
authors = ["fluyy <tulneer@gmail.com>"]
edition = "2018"


[lib]
name = "qcloud_client"
path = "src/lib.rs"

[[bin]]
name = "qcli"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde_derive = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = "2"
sha2 = "0.8"
chrono = "0.4"
hmac="0.7"
hex = "0.4"
tokio = { version = "0.2", features = ["full"] }
